LIN-3332/LIN-3585 :: Show HTMLContent in Labels - deprecate htmlContent annotation property - introduce HtmlContent and respective builder class
Change-Id: Ic40873f401d47c47502e7ee6361b6b3f5d1c2c75